getAllPostsByAuthorFirstNameAndLastName completed. For almost all methods with pagination and sorting we are using @RequestParam and @PathVariable.